Create dev and production profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.thymeleaf.mode=HTML
 
 spring.jackson.time-zone=America/Sao_Paulo
+
+# change profile to dev to use localhost api
+spring.profiles.active=production
