Rename "production" profile to "prod"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.thymeleaf.mode=HTML
 spring.jackson.time-zone=America/Sao_Paulo
 
 # change profile to dev to use localhost api
-spring.profiles.active=production
+spring.profiles.active=prod
